tests/type/errors/bad_scope1.typedsol
6:9 error: Symbol not found